Added a error object in settings.json. Updates temp.

--- a/settings.json
+++ b/settings.json
@@ -1,5 +1,8 @@
 {
   "prefix": ".",
   "default": "Could not find that command.",
-  "timeout": 68000
+  "timeout": 68000,
+  "errors": {
+    "temp": "Please provide warm, cold, hot, ice or a number between 0 and 500."
+  }
 }
