--- a/settings.json
+++ b/settings.json
@@ -2,10 +2,5 @@
   "prefix": ".",
   "default": "Could not find that command.",
   "lamps": [10, 11, 12, 13, 16, 2, 14, 8, 1],
-  "help": "```Everyone:\r\n  -\tparty /  Create a party\r\n  -\thelp / Get all commands\r\n  -\ttoggle / Toggle all lights\r\n  -\ton / Turn of all lights\r\n  -\toff / Turn off all lights\r\n  -\ttemp / Change the temperature  of the lights\r\n  -\tbri / Change the temperature  of the lights\r\n\r\nElite only:\r\n  -\tignore / Wouldn't you like to know wheater boy\r\n  -\tunignore / Unignore specific  Discord user```",
-  "opusers": ["127076783714598912", "219765969571151872", "208567167061327872"],
-  "errors": {
-    "temp": "Please provide warm, cold, hot, ice or a number between 0 and 500.",
-    "bri": "Please provide bright, dim or a number between 0 and 255."
-  }
+  "help": "```Everyone:\r\n  -\tparty /  Create a party\r\n  -\thelp / Get all commands\r\n  -\ttoggle / Toggle all lights\r\n  -\ton / Turn of all lights\r\n  -\toff / Turn off all lights\r\n  -\ttemp / Change the temperature  of the lights\r\n  -\tbri / Change the temperature  of the lights\r\n\r\nElite only:\r\n  -\tignore / Wouldn't you like to know wheater boy\r\n  -\tunignore / Unignore specific  Discord user```"
 }
