--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "discord.js": "^11.4.2",
     "node-hue-api": "^2.4.4",
     "node-opus": "^0.3.1",
+    "sentiment": "^5.0.1",
     "simple-ssh": "^1.0.0",
     "ytdl-core": "^0.29.1"
   }
