Added record command

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@ persons/
 blacklist.json
 node_modules
 logs/*
+recordings/*.pcm
+
 
 # All credentials
 credentials/discord.json
@@ -10,3 +12,5 @@ credentials/hue.json
 credentials/mysql.json
 credentials/scontrol.json
 credentials/shh.json
+
+credentials/ssh.json
