--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,5 @@ recordings/*.pcm
 
 
 # All credentials
-credentials/discord.json
-credentials/hue.json
-credentials/mysql.json
-credentials/scontrol.json
-credentials/shh.json
-
-credentials/ssh.json
+credentials/*
+!credentials/*.sample
