--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   "dependencies": {
     "castv2-player": "^2.0.5",
     "discord.js": "^11.4.2",
+    "mp3-duration": "^1.1.0",
     "mysql": "^2.17.1",
     "node-hue-api": "^2.4.4",
     "node-opus": "^0.3.1",
+    "request": "^2.88.0",
     "sentiment": "^5.0.1",
     "simple-ssh": "^1.0.0",
     "ytdl-core": "^0.29.1"
