--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "discord.js": "^11.4.2",
     "mysql": "^2.17.1",
     "node-hue-api": "^2.4.4",
+    "node-telegram-bot-api": "^0.30.0",
     "sentiment": "^5.0.1"
   }
 }
