--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "discord.js": "^11.4.2",
+    "express": "^4.17.1",
     "mysql": "^2.17.1",
     "node-hue-api": "^2.4.4",
     "node-telegram-bot-api": "^0.30.0",
