--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "discord.js": "^11.4.2",
     "express": "^4.17.1",
+    "https": "^1.0.0",
     "mysql": "^2.17.1",
     "node-hue-api": "^2.4.4",
     "node-telegram-bot-api": "^0.30.0",
