✅ Added key to test suite

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -33,3 +33,6 @@ jobs:
 
       - name: Run deno test
         run: deno test -A --unstable
+        env:
+          ci: TRUE
+          TODOIST: ${{ secrets.TODOIST }}
