🎨 Formatted and refactored

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -32,7 +32,7 @@ jobs:
           deno-version: v1.x
 
       - name: Run deno test
-        run: deno test -A --unstable
+        run: deno test --allow-net --allow-env --unstable
         env:
           ci: TRUE
           TODOIST: ${{ secrets.TODOIST }}
