--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -3,7 +3,24 @@ name: Checks
 on: [push, pull_request]
 
 jobs:
-  Lint:
+  Quality:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v2
+
+      - name: Setup latest deno version
+        uses: denolib/setup-deno@v2
+        with:
+          deno-version: v1.x
+
+      - name: Run deno lint
+        run: deno lint --unstable
+
+      - name: Run deno format
+        run: deno fmt — check
+
+  Format:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout sources
