--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,10 +1,15 @@
 name: Checks
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
-  Quality:
+  quality:
+    name: Quality
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout sources
         uses: actions/checkout@v2
@@ -14,39 +19,24 @@ jobs:
         with:
           deno-version: v1.x
 
-      - name: Run deno lint
-        run: deno lint --unstable
+      - name: Run Deno fmt
+        run: deno fmt --check
 
-      - name: Run deno format
-        run: deno fmt — check
+      - name: Run Deno lint
+        run: deno lint
 
-  Format:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
+  # Test:
+  #   name: Test
+  #   runs-on: ubuntu-latest
 
-      - name: Setup latest deno version
-        uses: denolib/setup-deno@v2
-        with:
-          deno-version: v1.x
+  #   steps:
+  #     - name: Checkout sources
+  #       uses: actions/checkout@v2
 
-      - name: Run deno lint
-        run: deno lint --unstable
+  #     - name: Setup latest deno version
+  #       uses: denolib/setup-deno@v2
+  #       with:
+  #         deno-version: v1.x
 
-  Test:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v2
-
-      - name: Setup latest deno version
-        uses: denolib/setup-deno@v2
-        with:
-          deno-version: v1.x
-
-      - name: Run deno test
-        run: deno test --allow-net --allow-env --unstable
-        env:
-          ci: TRUE
-          TODOIST: ${{ secrets.TODOIST }}
+  #     - name: Run Deno test
+  #       run: deno test -A
