--- a/package.json
+++ b/package.json
@@ -10,5 +10,11 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "imapflow": "^1.0.158"
+  },
+  "devDependencies": {
+    "@types/bun": "latest"
+  },
+  "peerDependencies": {
+    "typescript": "^5.0.0"
   }
 }
