--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "imapflow": "^1.0.158",
-    "openai": "^4.29.2"
+    "openai": "^4.29.2",
+    "string-strip-html": "^13.4.6"
   },
   "devDependencies": {
     "@types/bun": "latest"
