--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.3.1",
     "dotenv": "^16.4.5",
     "imapflow": "^1.0.158",
-    "openai": "^4.29.2",
     "string-strip-html": "^13.4.6"
   },
   "devDependencies": {
