--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   "dependencies": {
     "@google/generative-ai": "^0.3.1",
     "dotenv": "^16.4.5",
-    "imapflow": "^1.0.158",
-    "string-strip-html": "^13.4.6"
+    "imapflow": "^1.0.158"
   },
   "devDependencies": {
     "@types/bun": "latest"
