--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/generative-ai": "^0.3.1",
     "dotenv": "^16.4.5",
-    "imapflow": "^1.0.158"
+    "googleapis": "^134.0.0",
+    "imapflow": "^1.0.158",
+    "openai": "^4.32.1"
   },
   "devDependencies": {
     "@types/bun": "latest"
