--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.42.0",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.4.5",
     "googleapis": "^134.0.0",
     "imapflow": "^1.0.158",
