--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.42.0",
     "csv-parser": "^3.0.0",
+    "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
     "googleapis": "^134.0.0",
     "imapflow": "^1.0.158",
