--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.6.0",
     "@supabase/supabase-js": "^2.42.0",
     "csv-parser": "^3.0.0",
     "discord.js": "^14.14.1",
